# Copyright (c) 2016 Ember
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

add_subdirectory(login)
add_subdirectory(social)
add_subdirectory(gateway)
#add_subdirectory(world)
add_subdirectory(account)

add_subdirectory(character)
#add_subdirectory(game)
#add_subdirectory(instancemaster)
#add_subdirectory(instanceslave)
add_subdirectory(libs)

add_subdirectory(tools)