# Copyright (c) 2016 - 2024 Ember
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

add_subdirectory(shared)
add_subdirectory(logger)
add_subdirectory(srp6)
add_subdirectory(conpool)
add_subdirectory(spark)
add_subdirectory(protocol)
add_subdirectory(dbcreader)
add_subdirectory(dnssd)
add_subdirectory(stun)
add_subdirectory(ports)
add_subdirectory(mpq)